--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"assets/images/FirstToDig.png":["assets/images/FirstToDig.png"],"assets/icons/krumaskaicon.png":["assets/icons/krumaskaicon.png"]}
+{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"assets/images/FirstToDig.png":["assets/images/FirstToDig.png"],"assets/images/flutter_ca.jpg":["assets/images/flutter_ca.jpg"],"assets/icons/krumaskaicon.png":["assets/icons/krumaskaicon.png"]}
